# nur-combined

./: default.nix  repos.json
.github/: renovate.json
.github/workflows/: update.yml
repos/0x4A6F/: ci.nix  default.nix  overlay.nix  treefmt.toml
repos/0x4a6f/: .travis.yml  README.md
repos/12Boti/: README.md  default.nix
repos/715d/: README.md  default.nix
repos/7mind/: .gitignore  README.md  default.nix  flake.nix  test.sh  update.sh
repos/999eagle/: .gitlab-ci.yml  LICENSE  README.md  ci.nix  default.nix  flake.nix  overlay.nix
repos/9glenda/: default.nix
repos/Adamekka/: .env.example  README.md  ci.nix  default.nix
repos/Alxandr/: .kodiak.toml  README.md  ci.nix  default.nix  flake.nix
repos/AndrewKvalheim/: .gitignore  LICENSE.md  Provisioning.md  README.md  nur.nix  packages.nix  system.nix  user.nix
repos/AsterisMono/: README.md  default.nix
repos/AstroOrbis/: Justfile  LICENSE  README.md  ci.nix  default.nix  flake.nix
repos/AusCyber/: .gitignore  README.md  ci.nix  default.nix  flake.nix  (+3 more)
repos/ambroisie/templates/c++-cmake/: .clang-format  CMakeLists.txt  flake.nix
repos/ambroisie/templates/c++-cmake/.woodpecker/: check.yml
repos/ambroisie/templates/c++-cmake/src/: CMakeLists.txt
repos/ambroisie/templates/c++-cmake/tests/unit/: CMakeLists.txt  dummy_test.cc
repos/ccicnce113424/_sources/sha256-+yWq3qpkzK3XwmRYGEb1SifcH0p4reFPh3VLbHZWnrk=/: Cargo.toml
repos/ccicnce113424/_sources/sha256-+yWq3qpkzK3XwmRYGEb1SifcH0p4reFPh3VLbHZWnrk=/frontend/kde/: metadata.json
repos/miaupaw/: .gitignore  Cargo.toml  LICENSE  PRIVACY.md  README.md  README.portable.md  README.portable.windows.md  SECURITY.md  default.nix  flake.nix
repos/miaupaw/.github/: FUNDING.yml
repos/miaupaw/.github/workflows/: check.yml
repos/miaupaw/assets/: ie-r.desktop  installer.nsi
repos/miaupaw/assets/fonts/: OFL.txt
repos/miaupaw/launcher/: ie-r-tray.c  ie-r-tray.rc
repos/miaupaw/nix/: linux.nix  package.nix  windows.nix
repos/miaupaw/src/: main.rs
repos/miaupaw/src/connectors/: mod.rs  windows.rs  x11.rs
repos/miaupaw/src/connectors/wayland/: delegates.rs  input.rs  mod.rs  oracle.rs  render.rs
repos/miaupaw/src/core/: color_service.rs  config.rs  default_config.toml  formats.rs  metrics.rs  mod.rs  terminal.rs  text.rs
repos/miaupaw/src/core/about/: mod.rs
repos/miaupaw/src/core/capture/: kwin.rs  mod.rs  portal.rs  windows.rs  wlr.rs
repos/miaupaw/src/core/overlay/: glass.rs  hud.rs  magnifier.rs  mod.rs  primitives.rs  shapes.rs
repos/miaupaw/src/daemon/: about_win.rs  dbus_menu.rs  dbus_tray.rs  event_sender.rs  mod.rs  pipe_menu.rs  rofi_menu.rs  scout.rs  timer.rs  tray_win.rs
repos/mio/by-name/om/omnimux/src/: .flutter-plugins-dependencies  .gitignore  .metadata  Cargo.toml  README.md  index.html  package-lock.json  package.json  pubspec.lock.json  pubspec.yaml  test-dist.cjs  test-html.mjs  test-html2.mjs  test-html3.mjs  test-html4.mjs  test-html5.mjs  test-jsdom.cjs  test-ui.mjs  test-xterm.cjs  test.html  test.rs  test_color.rs  test_cx.rs  test_gpui.rs  test_update.rs  test_vt100.rs
repos/mio/by-name/om/omnimux/src/.dart_tool/: package_config.json  package_graph.json  version
repos/mio/by-name/om/omnimux/src/.dart_tool/flutter_build/44d990fb86a59741b5040a8008a81397/: .filecache
repos/mio/by-name/om/omnimux/src/lib/: main.dart
repos/mio/by-name/om/omnimux/src/lib/src/bindings/: bindings.dart
repos/mio/by-name/om/omnimux/src/lib/src/bindings/bincode/: bincode.dart  bincode_deserializer.dart  bincode_serializer.dart
repos/mio/by-name/om/omnimux/src/lib/src/bindings/serde/: binary_deserializer.dart  binary_serializer.dart  bytes.dart  hash_utils.dart  int_128.dart  serde.dart  slice.dart  uint_128.dart  uint_64.dart  unit.dart
repos/mio/by-name/om/omnimux/src/lib/src/bindings/signals/: get_ssh_hosts.dart  resize_session.dart  signal_handlers.dart  signals.dart  ssh_hosts_result.dart  start_session.dart  stop_session.dart  terminal_exit.dart  terminal_output.dart  trait_helpers.dart  write_session.dart
repos/mio/by-name/om/omnimux/src/linux/: CMakeLists.txt
repos/mio/by-name/om/omnimux/src/linux/runner/: my_application.cc
repos/mio/by-name/om/omnimux/src/macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh  flutter_native_integration.env
repos/mio/by-name/om/omnimux/src/macos/Runner/: Info.plist  MainFlutterWindow.swift
repos/mio/by-name/om/omnimux/src/macos/Runner.xcodeproj/: project.pbxproj
repos/mio/by-name/om/omnimux/src/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
repos/mio/by-name/om/omnimux/src/macos/Runner/Configs/: AppInfo.xcconfig
repos/mio/by-name/om/omnimux/src/native/hub/: Cargo.toml
repos/mio/by-name/om/omnimux/src/native/hub/src/actors/: mod.rs
repos/mio/by-name/om/omnimux/src/native/hub/src/signals/: mod.rs
repos/mio/by-name/om/omnimux/src/src/: App.tsx  actions.rs  fonts.rs  hosts.rs  main.rs  palette.rs  session.rs  settings.rs  ssh_config.rs  tabs.rs
repos/mio/by-name/om/omnimux/src/src-tauri/: Cargo.toml  tauri.conf.json
repos/mio/by-name/om/omnimux/src/src-tauri/capabilities/: default.json
repos/mio/by-name/om/omnimux/src/src-tauri/src/: main.rs
repos/mio/by-name/om/omnimux/src/src/tabs/: action_dispatch.rs  actions_handlers.rs  chrome.rs  colors.rs  focus.rs  lifecycle.rs  mod.rs  overlays.rs  settings_panel.rs  tab_bar.rs
repos/mio/by-name/om/omnimux/src/windows/: CMakeLists.txt
repos/mio/by-name/om/omnimux/src/windows/flutter/ephemeral/.plugin_symlinks/: rinf
repos/mio/by-name/om/omnimux/src/windows/runner/: Runner.rc  main.cpp
repos/mio/by-name/omnimux/src/src-tauri/: Cargo.toml
repos/mio/by-name/omnimux/src/src-tauri/src/: main.rs
repos/wolfangaukang/templates/python/: .envrc  .gitignore  default.nix  devenv.nix  devenv.yaml  flake.nix  gorin.toml  package.nix  pyproject.toml  shell.nix
repos/wolfangaukang/templates/python/.helix/: languages.toml
repos/wolfangaukang/templates/python/nix/: pkgs.nix  requirements.nix
repos/wolfangaukang/templates/python/project/: __init__.py  __main__.py  bot.py
(+36469 files in other folders)
