[package]
name = "ie-r"
version = "0.1.1"
edition = "2024"

# ── Cross-platform ────────────────────────────────────────────────
[dependencies]
ab_glyph = "0.2.32"
anyhow = "1.0.101"
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
fontdb = "0.23.0"
global-hotkey = "0.6.0"
image = { version = "0.25.9", default-features = false, features = ["png"] }
indexmap = { version = "2.7.1", features = ["serde"] }
open = "5"
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.10"
tokio = { version = "1.39.2", features = ["rt-multi-thread", "macros"] }
toml_edit = { version = "0.23", features = ["serde"] }

# ── Unix only ─────────────────────────────────────────────────────
[target.'cfg(unix)'.dependencies]
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
ashpd = { version = "0.12.1", default-features = false, features = ["tokio", "backend"] }
calloop = { version = "0.14.4", features = ["signals"] }
calloop-wayland-source = "0.4.1"
futures-util = { version = "0.3", default-features = false }
libc = "0.2"
smithay-client-toolkit = "0.20.0"
softbuffer = "0.4.8"
wayland-client = "0.31.12"
wayland-protocols = { version = "0.32.10", features = ["client"] }
wayland-protocols-wlr = { version = "0.3.5", features = ["client"] }
winit = "0.30.12"
x11rb = { version = "0.13.2", features = ["allow-unsafe-code"] }
zbus = "5.13.2"

# ── Windows only ──────────────────────────────────────────────────
[target.'cfg(windows)'.dependencies]
arboard = { version = "3.6.1" }
windows-sys = { version = "0.59", features = [
    "Win32_System_Console",
] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3     # Optimize for speed (SIMD, vectorization)
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce parallel code generation for better optimization
panic = "abort"   # Remove panic recovery code to save space
strip = true      # Automatically strip symbols from the binary

[dev-dependencies]
anyhow = "1.0.101"
