[tool.poetry]
name = "project"
version = "0.1.0"
description = "Template for Python projects that uses Poetry"
authors = ["P. R. d. O. <d.ol.rod@tutanota.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"

[tool.poetry.scripts]
project = "project:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
