[tool.poetry]
name = "project"
version = "0.0.1"
description = "Template for Python projects that uses Poetry"
authors = ["P. R. d. O. <d.ol.rod@tutanota.com>"]
exclude = [
  "**/*.nix",
  "flake.lock"
]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^23.10"
mypy = "^1.6"
pytest = "^7.4"

#[tool.poetry.scripts]
#project = "project:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
