[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["P. <d.ol.rod@tutanota.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
sherlock = 'test.__main__:main'

[tool.poetry.group.lint.dependencies]
black = "^24.4.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
