[package]
name = "omnimux"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-channel = "2.5.0"
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
gpui-terminal = "0.1.0"
parking_lot = "0.12.5"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smol = "2.0.2"
tokio = "1.53.0"
