[package]
name = "omnimux"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { version = "0.2.2", features = ["runtime_shaders"] }
gpui-component = "0.5.1"
gpui-terminal = { path = "vendor/gpui-terminal" }
glob = "0.3"
portable-pty = "0.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Wayland touchscreen support (wl_touch → mouse/scroll) until upstream merges
# https://github.com/zed-industries/zed/pull/40139 into crates.io gpui.
[patch.crates-io]
gpui = { path = "vendor/gpui" }
